# frostbyte-etl-colabbooks-pack

./: .env.example  .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .sops.yaml  ALL_IN_ONE_ZERO_SHOT_PRD_MULTIMODAL_ENHANCEMENT_REMEDIATION_TEST_VERIFICATION.md  BIGBOOK.md  BUILD_1HR.md  Dockerfile  EXAMPLE_ZERO_SHOT_BUILD_OS_ALL_IN_ONE_PPP.md  FROSTBYTE_ETL_DASHBOARD_ENTERPRISE_COMPLETE.md  FROSTBYTE_PRODUCT_VISION.md  HANDOFF.md  Makefile  PROJECT_FIT_ANALYSIS_REPORT.md  Prompt_-_Implement_Missing_Backend_APIs_for_Frostbyte_ETL_Dashboard.md  QUICKSTART.md  README.md  REPRODUCE_ZERO_SHOT.md  docker-compose.test.yml  docker-compose.yml  generate_enhancement_implementations.py  openmemory.md  package-lock.json
.kombai/: ACTIVITY_LOG.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  KOMBAI_ACCOUNTABILITY_FRAMEWORK.md
.planning/: CONTEXT_WINDOW_STRATEGY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.secrets/: README.md  age.pub
diagrams/: architecture.mmd  offline_bundle.mmd  (+1 more)
pipeline/: Dockerfile  pyproject.toml
pipeline/pipeline/: __init__.py  auth.py  clamav_client.py  config.py  db.py  embedding.py  embedding_enqueue.py  events.py  main.py  parse_enqueue.py  policy_enqueue.py  ratelimit.py  schema_validation.py  secrets.py  tenant.py  vector_store.py
pipeline/pipeline/intake/: __init__.py  mime.py  models.py  receipt_store.py  routes.py  service.py  validation.py
pipeline/pipeline/multimodal/: __init__.py  audio_processor.py  config.py  detector.py  image_processor.py  video_processor.py
pipeline/pipeline/parsing/: __init__.py  models.py  stages.py
pipeline/pipeline/policy/: __init__.py  gates.py  injection.py  models.py  service.py
pipeline/pipeline/routes/: auth_routes.py  collections.py  documents.py  pipeline.py  tenant_schemas.py  tenants.py  verification.py
pipeline/pipeline/schemas/: __init__.py  tenant_schema.py
pipeline/pipeline/storage/: __init__.py  credentials.py  minio_provisioner.py  postgres_provisioner.py  provisioner.py  qdrant_provisioner.py  redis_provisioner.py
pipeline/tests/: test_storage.py
pipeline/tests/compliance/: __init__.py  conftest.py  test_fedramp.py  test_gdpr.py  test_hipaa.py  test_tenant_schema.py
pipeline/tests/routes/: test_documents_api.py  test_pipeline.py  test_tenants.py  test_verification.py
(+150 files in other folders)
